--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,55 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.navbar {
+  /* border: 1px solid black; */
+  height: 10%;
   display: flex;
-  flex-direction: column;
+  /* background-color: lightblue; */
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+
+  .routes {
+      display: flex;
+      margin: 0 auto;
+      gap: 2rem;
+
+      
+    
+  }
+
+  .profile {
+      display: flex;
+      position: absolute;
+      left: 90%;
+
+      button {
+          background-color: lightblue;
+          width: 4rem;
+          height: 2rem;
+          border: none;
+          font-weight: 550;
+
+
+      }
+
+      button:hover {
+          cursor: pointer;
+
+      }
+
+  }
+
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+
+.a {
+    color: black;
+    text-decoration: none;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: larger;
+    font-weight: 15px;
+    margin-bottom: 1rem;
+    cursor: pointer;
+    
+
+    
 }
